efi_paper.bib; bib; Added Mitnitski 2005, for methods

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2878,3 +2878,24 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
     year = {2021},
     url = {https://www.R-project.org/},
 }
+
+
+
+@article{mitnitski05,
+  title = {Relative {{Fitness}} and {{Frailty}} of {{Elderly Men}} and {{Women}} in {{Developed Countries}} and {{Their Relationship}} with {{Mortality}}: {{FITNESS AND FRAILTY IN RELATION TO MORTALITY}}},
+  shorttitle = {Relative {{Fitness}} and {{Frailty}} of {{Elderly Men}} and {{Women}} in {{Developed Countries}} and {{Their Relationship}} with {{Mortality}}},
+  author = {Mitnitski, Arnold and Song, Xiaowei and Skoog, Ingmar and Broe, Ga and Cox, Jafna L. and Grunfeld, Eva and Rockwood, Kenneth},
+  year = {2005},
+  month = dec,
+  volume = {53},
+  pages = {2184--2189},
+  issn = {00028614, 15325415},
+  doi = {10.1111/j.1532-5415.2005.00506.x},
+  journal = {Journal of the American Geriatrics Society},
+  language = {en},
+  number = {12}
+}
+
+
+
+
