efi_paper.bib; bib; Added Greene and Etheredge references

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -2899,3 +2899,36 @@ CONCLUSION: These results support the robustness of the concept of frailty as a 
 
 
 
+
+@article{etheredge07,
+  title = {A Rapid-Learning Health System},
+  author = {Etheredge, Lynn M.},
+  year = {2007 Mar-Apr},
+  journal = {Health Affairs (Project Hope)},
+  volume = {26},
+  number = {2},
+  pages = {w107-118},
+  issn = {1544-5208},
+  doi = {10.1377/hlthaff.26.2.w107},
+  abstract = {Private- and public-sector initiatives, using electronic health record (EHR) databases from millions of people, could rapidly advance the U.S. evidence base for clinical care. Rapid learning could fill major knowledge gaps about health care costs, the benefits and risks of drugs and procedures, geographic variations, environmental health influences, the health of special populations, and personalized medicine. Policymakers could use rapid learning to revitalize value-based competition, redesign Medicare's payments, advance Medicaid into national health care leadership, foster national collaborative research initiatives, and design a national technology assessment system.},
+  language = {eng},
+  pmid = {17259191},
+  keywords = {Delivery of Health Care,Evidence-Based Medicine,Female,Humans,Information Systems,Learning,Male,Medicaid,Medical Records Systems; Computerized,Medicare,National Health Insurance; United States,Private Sector,Public Health Informatics,Public Sector,Regional Medical Programs,Systems Integration,Total Quality Management,United States}
+}
+
+@article{greene12,
+  title = {Implementing the {{Learning Health System}}: {{From Concept}} to {{Action}}},
+  shorttitle = {Implementing the {{Learning Health System}}},
+  author = {Greene, Sarah M. and Reid, Robert J. and Larson, Eric B.},
+  year = {2012},
+  month = aug,
+  journal = {Annals of Internal Medicine},
+  volume = {157},
+  number = {3},
+  pages = {207},
+  issn = {0003-4819},
+  doi = {10.7326/0003-4819-157-3-201208070-00012},
+  language = {en}
+}
+
+
